--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -108,7 +108,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seclab.cs.washington.edu/'>Security and Privacy Research Lab ? Paul G. Allen School of Computer Science &amp; Engineering, University of Washington</a></h5> 
+<h5><a href='https://seclab.cs.washington.edu/'>Security and Privacy Research Lab ? Paul G. Allen School of Computer Science &amp; Engineering, University of Washington</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
@@ -170,11 +170,11 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -278,7 +278,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -314,7 +314,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.newschool.edu/postings/17499'>The New School Job Site | Privacy and Security Compliance Specialist</a></h5> 
+<h5><a href='https://careers.newschool.edu/postings/17499'>The New School Job Site | Privacy and Security Compliance Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-26</p>
 <hr/>
@@ -322,7 +322,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluevine/e84d469d-d675-4dbc-84c9-9a59efe523e2'>BlueVine - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/bluevine/e84d469d-d675-4dbc-84c9-9a59efe523e2'>BlueVine - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
@@ -350,7 +350,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1642654'>Job Application for Privacy Analyst at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1642654'>Job Application for Privacy Analyst at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
